<resources>
    <string name="app_name">Family_Safety_App</string>
    <string name="sos">SOS</string>
    <string name="gaurd">GAURD</string>
    <string name="sosmsg">Urgently Contact Family members</string>
    <string name="gaurdmsg">Open when you are at a potential Danger</string>
    <string name="securitytitle">Security</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="protect">Gaurd</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>